<resources>
    <string name="app_name" translatable="false">Vives Plus</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="vives_logo_content_desc" translatable="false">Vives logo</string>
<string name="vivesplus_api_link" translatable="false">https://plus.vives.be/api</string>
 <string name="vivesplus_base_link" translatable="false">https://plus.vives.be/</string>
       <string name="vivesplus_webshop_link" translatable="false">https://www.vivesfanbase.be</string>
       <string name="welcome_vives_student" translatable="false">Welcome to Vives+!</string>
       <string name="afwezigheden">Absences</string>
       <string name="wijzig_campus">Change group and campus</string>
       <string name="selected_campus" translatable="false">selected_campus</string>
       <string name="pref_dashboard_shown" translatable="false">advancedDashboardShown</string>
       <string name="pref_jwt" translatable="false">jwt_token</string>
       <string name="pref_jwt_without_beaerer" translatable="false">pref_jwt_without_bearer</string>
       <string name="pref_openbaar_vervoer" translatable="false">openbaarVervoer</string>
       <string name="pref_selected_campus_name" translatable="false">selectedCampusName</string>
       <string name="pref_trains_file_available" translatable="false">trainsFileAvailable</string>
       <string name="pref_home_station" translatable="false">homeStation</string>
       <string name="pref_kul_number" translatable="false">kulNumber</string>
       <string name="pref_selected_start_screen" translatable="false">selectedStartScreen</string>
       <string name="pref_role" translatable="false">myRole</string>
       <string name="pref_selected_field_of_study" translatable="false">selectedFieldOfStudy</string>
       <string name="pref_last_date_message_viewed" translatable="false">last_date_message_viewed</string>
       <string name="pref_permission_notifications" translatable="false">permission_notification</string>
       <string name="lastselectedcampusrestaurant" translatable="false">lastselectedcampusrestaurant</string>
       <string name="lastselectedcampusbus" translatable="false">lastselectedcampusbus</string>
       <string name="lastselectedcampustrain" translatable="false">lastselectedcampusbus</string>
       <string name="docent_to_be_searched_kul_number" translatable="false">docent_to_be_searched_kul_number</string>
       <string name="your_profiel">My profile</string>
       <string name="mijn_kul_nummer">My kul number:</string>
       <string name="mijn_opleiding">My education:</string>
       <string name="not_signed_in">Not signed in</string>
       <string name="mijn_campus">My campus:</string>
       <string name="geen_campus_geselecteerd">No campus selected</string>
       <string name="verkeer">Traffic</string>
       <string name="edit">Edit</string>
       <string name="geen_afwezigheden_gevonden">No absences found</string>
       <string name="ga_naar_profiel">Go to profile</string>
       <string name="log_in_eerst">Please log in first</string>
       <string name="bus_trein">Bus &amp; train</string>
       <string name="restaurant">Let\'s dine</string>
       <string name="mijn_afwezigheid">My absences</string>
       <string name="restaurants">Restaurants</string>
       <string name="geen_bussen_gevonden">No buses found</string>
       <string name="geen_campussen_gevonden">No campus found</string>
       <string name="geen_studiegebieden_gevonden">No groups found</string>
       <string name="geen_maaltijden_gevonden">No meals found</string>
       <string name="geen_restaurants_gevonden">No restaurants found</string>
       <string name="mijn_verkeers_info">My traffic info</string>
       <string name="mijn_thuisstation">My home station</string>
       <string name="mijn_vakken">My courses</string>
       <string name="geen_vakken_gevonden">No courses found</string>
       <string name="reset_vakken_data">Reset courses data</string>
       <string name="bistro" translatable="false">Bistro t\'forum</string>
       <string name="week_menu">Week menu</string>
       <string name="dashboard">Dashboard</string>
       <string name="uurrooster">Timetable</string>
       <string name="profiel">Profile</string>
       <string name="menu">Menu</string>
       <string name="credits">Credits</string>
       <string name="settings">Settings</string>
       <string name="openingsuren">Opening hours</string>
       <string name="bistro_info">"Bistro \'t Forum is the restaurant with table service at VIVES campus Kortrijk. You can go there every day from 10:00 to 16:00 for a selection of hot and cold dishes, a drink or just a coffee in a quiet atmosphere. The kitchen is open from 11:30 to 13:45. On warm days there is an outdoor terrace on the water with a view of the campus. Do you have lessons at a specific time or are you in a hurry? Place your order BEFORE 11.30 am and we will provide super-fast service. "</string>
       <string name="inloggen_messages">"You must first log in under profile before you can view your messages"</string>
       <string name="inloggen_afwezigheden">"You must first log in under profile before you can view your absences"</string>
       <string name="uitgelogd">"U are signed out"</string>
       <string name="niet_ingelogd">"Not signed in"</string>
       <string name="ingelogd_als">"Logged in as"</string>
       <string name="selecteer_campus">"Log in under profile and select your campus"</string>
       <string name="absences_change">"Past and current absences cannot be changed"</string>
       <string name="annuleer">"Cancel"</string>
       <string name="verwijder">"Delete"</string>
       <string name="zeker">"Are you sure?"</string>
       <string name="delete_absence">"Are you sure you want to delete this absence from the system?"</string>
       <string name="change_absence_past">"Past absences cannot be changed"</string>
       <string name="change_absence_ongoing">"Ongoing absences can not be edited"</string>
       <string name="van">"From:"</string>
       <string name="tot">"Until:"</string>
       <string name="maandag">"Monday"</string>
       <string name="dinsdag">"Tuesday"</string>
       <string name="woensdag">"Wednesday"</string>
       <string name="donderdag">"Thursday"</string>
       <string name="vrijdag">"Friday"</string>
       <string name="zaterdag">"Saturday"</string>
       <string name="zondag">"Sunday"</string>
       <string name="is_afwezig">"is absent"</string>
       <string name="log_out">"Log out"</string>
       <string name="gesloten">"closed"</string>
       <string name="reset_info">If you reset the data of your courses, you will not be able to change your courses until you reload your timetable.</string>
       <string name="Bus">"Bus"</string>
       <string name="trein">"Train"</string>
       <string name="overstap">" change"</string>
       <string name="overstappen">" changes"</string>
       <string name="min_vertraging">"min delay"</string>
       <string name="perron">"platform"</string>
       <string name="tijd_overstap">"min time for change"</string>
       <string name="OVERSTAPPEN">"CHANGES"</string>
       <string name="lector_afwezig">"Teacher absent"</string>
       <string name="updaten_uurrooster">"Updating timetable…"</string>
       <string name="niet_updatden">"You are offline, we cannot update your timetable :("</string>
       <string name="log_profiel">"Please log in under your profile."</string>
       <string name="geen_internet">"No internet connection available"</string>
       <string name="niet_herladen">"Cannot Reload …"</string>
       <string name="messages">"Messages"</string>
       <string name="selected_bus_id" translatable="false">As5d4fsd4f</string>
       <string name="prev_pref_selected_campus_name" translatable="false">_</string>
       <string name="myabscenses">My absences</string>
       <string name="abscenses" translatable="false">Absences</string>
       <string name="otherweeks">Other Weeks</string>
       <string name="nextweek">Next Week</string>
       <string name="thisweek">This Week</string>
       <string name="pref_docenten" translatable="false" />
       <string name="categorie">category</string>
       <string name="geen_berichten_gevonden">No messages found</string>
       <string name="pref_field_of_study_docentlist" translatable="false">prefFieldOfStudyDocentList</string>
       <string name="choose_f_o_s">--- Select groep ---</string>
       <string name="search_member">Search member</string>
       <string name="info" translatable="false">info</string>
       <string name="management">Management</string>
       <string name="uitroepteken" translatable="false">!</string>
       <string name="filter" translatable="false">filter</string>
       <string name="absenceInfoStudenten">In the absentee screen you will see all absences of teachers from whom you are being taught</string>
       <string name="absenceInfoDocenten">You will see all absences of colleagues who teach in the same study programs as yourself</string>
       <string name="searchDocentInfo">Click the phone icon to call or the mail icon to email your colleague</string>
       <string name="edit_profile">Edit Profile</string>
       <string name="campus">CAMPUS</string>
       <string name="thuisstation">HOME STATION</string>
       <string name="pref_date_messages" translatable="false">date_messages</string>
       <string name="registreer_afwezigheid">Register absence</string>
       <string name="nieuwe_afwezigheid_maken">Make new absence</string>
       <string name="geen_actuale_afwezigheden">No current absences</string>
       <string name="start_datum">Start date</string>
       <string name="start_tijd">Start time</string>
       <string name="eind_datum">End date</string>
       <string name="eind_tijd">End time</string>
       <string name="reden_afwezigheid_voor_administatie">Absence reason (for administration)</string>
       <string name="geen_meldingen_gevonden">No notifications found</string>
       <string name="gebruikte_icons">Used icons</string>
       <string name="by_those_icons_from_www_flaticon_com">By \'Those Icons\' from www.flaticon.com</string>
       <string name="by_vitaly_gorbachev_from_www_flaticon_com">By \'Vitaly Gorbachev\' from www.flaticon.com</string>
       <string name="by_freepik_from_www_flaticon_com">By \'Freepik\' from www.flaticon.com</string>
       <string name="by_eucalyp_from_www_flaticon_com">By \'Eucalyp\' from www.flaticon.com</string>
       <string name="naam">Name:</string>
       <string name="email">Email:</string>
       <string name="savebutton">Save</string>
       <string name="firstName">First name:</string>
       <string name="telephone">Telephone:</string>
       <string name="jobTitle">Job title:</string>
       <string name="bachelor">Bachelor</string>
       <string name="graduaat">Graduate</string>
       <string name="infoPhoneNumber">*Your phone number will never be shared with students through the VIVES plus app. This is only for colleagues and administrative staff.</string>
       <string name="infoFunctie">*A limited description of your tasks in VIVES. Think, for example, of your business card or email signature…</string>
       <string name="infoJobstudent">By checking this box, you agree that job offers for students can be sent to your email address. </string>
       <string name="jobstudent">Receive job student vacancies</string>
       <string name="xpo_kortrijk" translatable="false">XPO Kortrijk</string>
       <string name="ValidOn">Valid on</string>
       <string name="numberOfUses">Single use</string>
       <string name="QRError">Could not generate QR code</string>
       <string name="internetError">You need to connect to the internet to generate your ticket</string>
       <string name="again">Try again</string>
</resources>